[package]
name = "accounter"
version = "0.1.0"
edition = "2021"
repository = "https://https://github.com/tib888/accounter"
authors = ["Tibor Prokai"]

[dependencies]
rust_decimal = "1.23"
pest = "2.1"
pest_derive = "2.1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "fs", "io-std", "macros", "sync", "time"] }
pretty_env_logger = "0.4"
log = "0.4"
dotenv = "0.13"
clap = { version = "3.2", features = ["cargo"] }

[features]
simulate-delays = [] #adds 1000ms delay to every ledger database transaction as simulation